--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
-   .vs/
-**/bin/
-**/obj/
+# Build folders
+bin/
+obj/
+
+# Visual Studio
+.vs/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# NuGet / packages
+packages/
+*.nupkg
+.nuget/
+
+# Rider / IDE
+.idea/
+
+# Otros temporales
+*.log
+*.cache
+*.db
+*.db-journal
