Se crearon los nuevos servicios y vistas de inmueble, condicion, tipoInmueble y Ciudades

--- a/ParcialP3.Aplication/ParcialP3.Application.csproj
+++ b/ParcialP3.Aplication/ParcialP3.Application.csproj
@@ -10,4 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ParcialP3.Persistence\ParcialP3.Persistence.csproj" />
+  </ItemGroup>
 </Project>
